--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-html {
+/* html {
   box-sizing: border-box;
   width: 100vw;
   overflow-x: hidden;
@@ -8,9 +8,9 @@ html {
 *::before,
 *::after {
   box-sizing: inherit;
-}
+} */
 
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
@@ -18,7 +18,7 @@ body {
   background-color: #fff;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+} */
 
 img {
   display: block;
@@ -29,17 +29,17 @@ img {
 /*
  * Стили компонента App
  */
-.App {
+/* .App {
   display: grid;
   grid-template-columns: 1fr;
   grid-gap: 16px;
   padding-bottom: 24px;
-}
+} */
 
 /*
  * Стили компонента Searchbar
  */
-.Searchbar {
+/* .Searchbar {
   top: 0;
   left: 0;
   position: sticky;
@@ -56,12 +56,12 @@ img {
   background-color: #3f51b5;
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
     0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
-}
+} */
 
 /*
  * Стили компонента SearchForm
  */
-.SearchForm {
+/* .SearchForm {
   display: flex;
   align-items: center;
   width: 100%;
@@ -69,7 +69,7 @@ img {
   background-color: #fff;
   border-radius: 3px;
   overflow: hidden;
-}
+} */
 
 .SearchForm-button {
   display: inline-block;
@@ -86,11 +86,11 @@ img {
   outline: none;
 }
 
-.SearchForm-button:hover {
+/* .SearchForm-button:hover {
   opacity: 1;
-}
+} */
 
-.SearchForm-button-label {
+/* .SearchForm-button-label {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -100,9 +100,9 @@ img {
   white-space: nowrap;
   clip-path: inset(50%);
   border: 0;
-}
+} */
 
-.SearchForm-input {
+/* .SearchForm-input {
   display: inline-block;
   width: 100%;
   font: inherit;
@@ -111,7 +111,7 @@ img {
   outline: none;
   padding-left: 4px;
   padding-right: 4px;
-}
+} */
 
 .SearchForm-input::placeholder {
   font: inherit;
@@ -121,7 +121,7 @@ img {
 /*
  * Стили компонента ImageGallery
  */
-.ImageGallery {
+/* .ImageGallery {
   display: grid;
   max-width: calc(100vw - 48px);
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
@@ -132,7 +132,7 @@ img {
   list-style: none;
   margin-left: auto;
   margin-right: auto;
-}
+} */
 
 /*
  * Стили компонента ImageGalleryItem
@@ -159,7 +159,7 @@ img {
  * Стили компонента Modal
  */
 
-.Overlay {
+/* .Overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -175,12 +175,12 @@ img {
 .Modal {
   max-width: calc(100vw - 48px);
   max-height: calc(100vh - 24px);
-}
+} */
 
 /*
 * Стили компонента Buton (Load more)
 */
-.Button {
+/* .Button {
   padding: 8px 16px;
   border-radius: 2px;
   background-color: #3f51b5;
@@ -204,4 +204,4 @@ img {
 .Button:hover,
 .Button:focus {
   background-color: #303f9f;
-}
+} */
